--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5001",
+  "engines": {
+    "node": ">=16.14",
+    "npm": "8.x"
+  },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "",
     "@cloudinary/react": "^1.11.2",
